feat: add "build" subcommand
Add a subcommand to schedule a build on Jenkins for the given machine.
This utilizes Gentoo Build Publisher's `scheduleBuild` GraphQL mutation.

--- a/setup.cfg
+++ b/setup.cfg
@@ -20,6 +20,7 @@ console_scripts =
     gbp = gbpcli:main
 
 gbpcli.subcommands =
+    build = gbpcli.subcommands.build
     diff = gbpcli.subcommands.diff
     latest = gbpcli.subcommands.latest
     list = gbpcli.subcommands.list
