feat: add "packages" subcommand
Add a subcommand that can list the binary packages contained in a given
build.

--- a/setup.cfg
+++ b/setup.cfg
@@ -26,6 +26,7 @@ gbpcli.subcommands =
     list = gbpcli.subcommands.list
     logs = gbpcli.subcommands.logs
     machines = gbpcli.subcommands.machines
+    packages = gbpcli.subcommands.packages
     publish = gbpcli.subcommands.publish
     show = gbpcli.subcommands.show
 
