feat(subcommands) add "keep" subcommand
Add a subcommand that can mark a build to keep or release using the
GraphQL API in Gentoo Build Publisher.

--- a/setup.cfg
+++ b/setup.cfg
@@ -22,6 +22,7 @@ console_scripts =
 gbpcli.subcommands =
     build = gbpcli.subcommands.build
     diff = gbpcli.subcommands.diff
+    keep = gbpcli.subcommands.keep
     latest = gbpcli.subcommands.latest
     list = gbpcli.subcommands.list
     logs = gbpcli.subcommands.logs
