feat(subcommands): add "pull" subcommand
Like "publish" but only pulls.

--- a/setup.cfg
+++ b/setup.cfg
@@ -29,6 +29,7 @@ gbpcli.subcommands =
     machines = gbpcli.subcommands.machines
     packages = gbpcli.subcommands.packages
     publish = gbpcli.subcommands.publish
+    pull = gbpcli.subcommands.pull
     show = gbpcli.subcommands.show
 
 [options.packages.find]
