--- a/setup.cfg
+++ b/setup.cfg
@@ -27,6 +27,7 @@ gbpcli.subcommands =
     list = gbpcli.subcommands.list
     logs = gbpcli.subcommands.logs
     machines = gbpcli.subcommands.machines
+    notes = gbpcli.subcommands.notes
     packages = gbpcli.subcommands.packages
     publish = gbpcli.subcommands.publish
     pull = gbpcli.subcommands.pull
