--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,13 @@
 [build-system]
 requires = [
-    "setuptools>42",
+    "setuptools>45",
+    "setuptools_scm>=6.2",
     "wheel"
 ]
 
 build-backend = "setuptools.build_meta"
+
+[tool.setuptools_scm]
 
 [tool.coverage.run]
 source = ["gbpcli"]
