setup.cfg: don't pin versions of requests/yarl

--- a/setup.cfg
+++ b/setup.cfg
@@ -12,8 +12,8 @@ package_dir =
     =src
 
 install_requires =
-    requests~=2.25.1
-    yarl~=1.6.3
+    requests
+    yarl
 
 [options.entry_points]
 console_scripts =
