rename "show" subcommand to "status"
There are a lot of subcommands that "show" things.  This one shows the
status of the given build.

--- a/setup.cfg
+++ b/setup.cfg
@@ -31,7 +31,7 @@ gbpcli.subcommands =
     packages = gbpcli.subcommands.packages
     publish = gbpcli.subcommands.publish
     pull = gbpcli.subcommands.pull
-    show = gbpcli.subcommands.show
+    status = gbpcli.subcommands.status
 
 [options.packages.find]
 where = src
