Add support for GBP tags
Add ability to list, show, add and remove tags.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ packages = "gbpcli.subcommands.packages"
 publish = "gbpcli.subcommands.publish"
 pull = "gbpcli.subcommands.pull"
 status = "gbpcli.subcommands.status"
+tag = "gbpcli.subcommands.tag"
 
 
 [project.optional-dependencies]
