--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,13 @@ dependencies = [
     "yarl"
 ]
 requires-python = ">=3.10"
+classifiers = [
+    "Environment :: Console",
+    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
+    "Operating System :: POSIX :: Linux",
+    "Topic :: System :: Software Distribution",
+    "Programming Language :: Python :: 3",
+]
 
 [project.urls]
 homepage = "https://github.com/enku/gbpcli"
