add "inspect" subcommand
This is so you can glance at the entire "state" of the GBP instance.
Think of it as a combination of `machines`, `list`, and `status`.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ gbp = "gbpcli:main"
 [project.entry-points."gbpcli.subcommands"]
 build = "gbpcli.subcommands.build"
 diff = "gbpcli.subcommands.diff"
+inspect = "gbpcli.subcommands.inspect"
 keep = "gbpcli.subcommands.keep"
 latest = "gbpcli.subcommands.latest"
 list = "gbpcli.subcommands.list"
