--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,8 +45,8 @@ tag = "gbpcli.subcommands.tag"
 
 [project.optional-dependencies]
 [build-system]
-requires = ["pdm-pep517>=1.0.0"]
-build-backend = "pdm.pep517.api"
+requires = ["pdm-backend"]
+build-backend = "pdm.backend"
 
 [tool.pdm]
 version = { source = "scm" }
