--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,8 @@ license = {text = "GPL3+"}
 dependencies = [
     "requests",
     "rich>=12.5.1",
-    "yarl"
+    "yarl",
+    "urllib3<2.0.0"
 ]
 requires-python = ">=3.10"
 classifiers = [
