Revert "pyproject.toml: don't pull in urllib-2"
I think this was actually an issue with my local pdm virtual
environment. I have since updated that.

This reverts commit 599853b5f56ca407ef327f0de323e31ab4da281c.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,7 @@ license = {text = "GPL3+"}
 dependencies = [
     "requests",
     "rich>=12.5.1",
-    "yarl",
-    "urllib3<2.0.0"
+    "yarl"
 ]
 requires-python = ">=3.10"
 classifiers = [
