pin mypy to 1.7.1
Until https://github.com/python/mypy/issues/16400 is resolved.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,7 +56,7 @@ dev = [
     "black",
     "coverage",
     "build",
-    "mypy",
+    "mypy==1.7.1",  # Pin until mypy/issues/16400 is resolved
     "pylint",
     "types-requests",
 ]
