entrypoint: add ability to get config from a file
Add the ability to get the URL and "my machines" from the user's
~/.config/gbpcli.toml file.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "rich>=12.5.1",
     "toml; python_version < '3.11'",
     "yarl",
+    "platformdirs>=4.2.0",
 ]
 requires-python = ">=3.10"
 classifiers = [
