--- a/pyproject.toml
+++ b/pyproject.toml
@@ -74,7 +74,7 @@ profile = "black"
 dev = [
     "black",
     "coverage",
-    "mypy==1.7.1",
+    "mypy>=1.14.1",
     "pylint",
     "types-requests",
     "types-toml>=0.10.8.7",
