--- a/pyproject.toml
+++ b/pyproject.toml
@@ -79,4 +79,6 @@ dev = [
     "types-requests",
     "types-toml>=0.10.8.7",
     "unittest-fixtures @ git+https://github.com/enku/unittest-fixtures.git",
+    "gbp-testkit @ git+https://github.com/enku/gbp-testkit.git@master",
+    "gentoo-build-publisher>=2.3.0",
 ]
