utils: add utility to load the server config
Some server-only subcommands (e.g. archive plugin) need to know the
server config in order to operate. This change adds the ability for
those subcommands to request the config to be loaded into the
environment.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "yarl",
     "platformdirs>=4.2.0",
     "distutils-strtobool>=0.1.0",
+    "python-dotenv>=1.0.1",
 ]
 requires-python = ">=3.11"
 classifiers = [
