pyproject: switch to PyPI unittest-fixtures

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -79,7 +79,7 @@ dev = [
     "pylint",
     "types-requests",
     "types-toml>=0.10.8.7",
-    "unittest-fixtures @ git+https://github.com/enku/unittest-fixtures.git",
+    "unittest-fixtures",
     "gbp-testkit @ git+https://github.com/enku/gbp-testkit.git@master",
     "gentoo-build-publisher>=2.4.0rc1",
 ]
