pyproject: switch from gbp-testkit to gentoo-build-publisher[test]
gbp_testkit has been rolled back into gentoo-build-publisher. Let's use
that.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -80,6 +80,5 @@ dev = [
     "types-requests",
     "types-toml>=0.10.8.7",
     "unittest-fixtures",
-    "gbp-testkit @ git+https://github.com/enku/gbp-testkit.git@master",
-    "gentoo-build-publisher>=2.4.0rc1",
+    "gentoo-build-publisher[test] @ git+https://github.com/enku/gentoo-build-publisher.git@master",
 ]
