pyproject: add tests package to coverage
We want to know what test code isn't being run.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,7 +58,7 @@ version = { source = "scm" }
 skip-magic-trailing-comma = true
 
 [tool.coverage.run]
-source = ["gbpcli"]
+source = ["gbpcli", "tests"]
 omit = ["src/gbpcli/__main__.py"]
 
 [tool.flake8]
